# QTLive

./: CMakeLists.txt  README.md
src/: main.cpp  main.qml
